--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,15 +17,14 @@ jobs:
         with:
           repository: owner/target-repo-name  # Replace with actual owner/repo
           ref: ${{ inputs.target_branch }}
-          token: ${{ secrets.PAT_TOKEN }}  # Need a PAT if repo is private
           
-      - name: Search for deprecated APIs
+      - name: Search for deprecated APIs and endpoints
         id: search
         run: |
           # Create results directory
           mkdir -p results
           
-          # Perform search and save results
+          # Perform deprecated search and save results
           echo "### Deprecated API Files Found ($(date '+%Y-%m-%d'))" > results/report.md
           echo "Branch: ${{ inputs.target_branch }}" >> results/report.md
           echo "" >> results/report.md
@@ -49,6 +48,48 @@ jobs:
           # Add summary
           echo "" >> results/report.md
           echo "Total files found: $COUNT" >> results/report.md
+
+          # Create endpoints.json for storing HTTP endpoints
+          echo "[]" > results/endpoints.json
+          
+          # Process each deprecated file to find HTTP endpoints
+          while IFS= read -r file; do
+            if [ -f "$file" ]; then
+              # Find all HTTP method patterns and their endpoints
+              # Using awk to handle multiline matching and JSON creation
+              awk '
+              BEGIN { ORS="" }
+              /^```\s*http/ {
+                in_block=1
+                next
+              }
+              /^```/ {
+                if(in_block) in_block=0
+                next
+              }
+              in_block && /^(GET|POST|PUT|PATCH|DELETE)\s+\/[a-zA-Z0-9\/\-_]+/ {
+                endpoint=$2
+                method=$1
+                printf "{\"endpoint\":\"%s\",\"method\":\"%s\",\"page\":\"%s\"},\n", endpoint, method, FILENAME
+              }
+              ' "$file" >> results/temp_endpoints.txt
+            fi
+          done < results/files.txt
+
+          # Create proper JSON array with deduplication using jq
+          if [ -f results/temp_endpoints.txt ]; then
+            # Remove trailing comma, wrap in array, and deduplicate based on endpoint
+            (echo "["; cat results/temp_endpoints.txt | sed '$ s/,$//' ; echo "]") | \
+            jq 'unique_by(.endpoint)' > results/endpoints.json
+          fi
+
+          # Cleanup
+          rm -f results/temp_endpoints.txt
+
+          # Add endpoint count to report
+          ENDPOINT_COUNT=$(jq '. | length' results/endpoints.json)
+          echo "" >> results/report.md
+          echo "Unique endpoints found: $ENDPOINT_COUNT" >> results/report.md
 
       - name: Upload results as artifact
         if: always()
