--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout target repository
         uses: actions/checkout@v4
         with:
-          repository: owner/target-repo-name  # Replace with actual owner/repo
+          repository: microsoftgraph/microsoft-graph-docs-contrib  # Replace with actual owner/repo
           ref: ${{ inputs.target_branch }}
           
       - name: Search for deprecated APIs and endpoints
