--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   scan-deprecated:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # This is needed for pushing to the repo
     
     steps:
       - name: Checkout target repository
@@ -22,6 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: workflow-repo
+          token: ${{ github.token }}  # Use the GitHub token
           
       - name: Search for deprecated APIs and endpoints
         id: search
