--- a/.github/workflows/targetScan.yml
+++ b/.github/workflows/targetScan.yml
@@ -15,12 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout target repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           repository: ${{ inputs.target_repo }}
-          ref: ${{ inputs.target_branch }}
-          fetch-depth: 1
           
       - name: Download deprecated endpoints data
         run: |
